// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cascader can be selected 1`] = `
<div
  class="ant-select-dropdown ant-cascader-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
  style="opacity: 0; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected 2`] = `
<div
  class="ant-select-dropdown ant-cascader-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
  style="opacity: 0; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected 3`] = `
<div
  class="ant-select-dropdown ant-cascader-dropdown ant-slide-up-leave ant-slide-up-leave-start ant-slide-up"
  style="min-width: auto; pointer-events: none;"
>
  <div>
    <div
      class="ant-cascader-menus"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ant-cascader-menu-item ant-cascader-menu-item-active"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected in RTL direction 1`] = `
<div
  class="ant-select-dropdown ant-cascader-dropdown ant-cascader-dropdown-rtl ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
  style="opacity: 0; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus ant-cascader-rtl"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected in RTL direction 2`] = `
<div
  class="ant-select-dropdown ant-cascader-dropdown ant-cascader-dropdown-rtl ant-slide-up-leave ant-slide-up-leave-start ant-slide-up"
  style="min-width: auto; pointer-events: none;"
>
  <div>
    <div
      class="ant-cascader-menus ant-cascader-rtl"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected in RTL direction 3`] = `
<div
  class="ant-select-dropdown ant-cascader-dropdown ant-cascader-dropdown-rtl ant-slide-up-leave ant-slide-up-leave-start ant-slide-up"
  style="min-width: auto; pointer-events: none;"
>
  <div>
    <div
      class="ant-cascader-menus ant-cascader-rtl"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ant-cascader-menu-item ant-cascader-menu-item-active"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader legacy props should support showCheckedStrategy child 1`] = `
<div
  class="ant-select ant-cascader ant-select-multiple ant-select-allow-clear ant-select-open"
>
  <div
    class="ant-select-selector"
  >
    <div
      class="ant-select-selection-overflow"
    >
      <div
        class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
        style="opacity: 1;"
      >
        <div
          class="ant-select-selection-search"
          style="width: 0px;"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="true"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
          <span
            aria-hidden="true"
            class="ant-select-selection-search-mirror"
          >
          </span>
        </div>
      </div>
    </div>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-cascader-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
      style="opacity: 0; min-width: auto;"
    >
      <div>
        <div
          class="ant-cascader-menus"
        >
          <ul
            class="ant-cascader-menu"
            role="menu"
          >
            <li
              aria-checked="false"
              class="ant-cascader-menu-item ant-cascader-menu-item-expand"
              data-path-key="zhejiang"
              role="menuitemcheckbox"
              title="Zhejiang"
            >
              <span
                class="ant-cascader-checkbox"
              >
                <span
                  class="ant-cascader-checkbox-inner"
                />
              </span>
              <div
                class="ant-cascader-menu-item-content"
              >
                Zhejiang
              </div>
              <div
                class="ant-cascader-menu-item-expand-icon"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </div>
            </li>
            <li
              aria-checked="false"
              class="ant-cascader-menu-item ant-cascader-menu-item-expand"
              data-path-key="jiangsu"
              role="menuitemcheckbox"
              title="Jiangsu"
            >
              <span
                class="ant-cascader-checkbox"
              >
                <span
                  class="ant-cascader-checkbox-inner"
                />
              </span>
              <div
                class="ant-cascader-menu-item-content"
              >
                Jiangsu
              </div>
              <div
                class="ant-cascader-menu-item-expand-icon"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader legacy props should support showCheckedStrategy parent 1`] = `
<div
  class="ant-select ant-cascader ant-select-multiple ant-select-allow-clear ant-select-open"
>
  <div
    class="ant-select-selector"
  >
    <div
      class="ant-select-selection-overflow"
    >
      <div
        class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
        style="opacity: 1;"
      >
        <div
          class="ant-select-selection-search"
          style="width: 0px;"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="true"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
          <span
            aria-hidden="true"
            class="ant-select-selection-search-mirror"
          >
          </span>
        </div>
      </div>
    </div>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-cascader-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
      style="opacity: 0; min-width: auto;"
    >
      <div>
        <div
          class="ant-cascader-menus"
        >
          <ul
            class="ant-cascader-menu"
            role="menu"
          >
            <li
              aria-checked="false"
              class="ant-cascader-menu-item ant-cascader-menu-item-expand"
              data-path-key="zhejiang"
              role="menuitemcheckbox"
              title="Zhejiang"
            >
              <span
                class="ant-cascader-checkbox"
              >
                <span
                  class="ant-cascader-checkbox-inner"
                />
              </span>
              <div
                class="ant-cascader-menu-item-content"
              >
                Zhejiang
              </div>
              <div
                class="ant-cascader-menu-item-expand-icon"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </div>
            </li>
            <li
              aria-checked="false"
              class="ant-cascader-menu-item ant-cascader-menu-item-expand"
              data-path-key="jiangsu"
              role="menuitemcheckbox"
              title="Jiangsu"
            >
              <span
                class="ant-cascader-checkbox"
              >
                <span
                  class="ant-cascader-checkbox-inner"
                />
              </span>
              <div
                class="ant-cascader-menu-item-content"
              >
                Jiangsu
              </div>
              <div
                class="ant-cascader-menu-item-expand-icon"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader popup correctly with defaultValue 1`] = `
<div
  class="ant-select-dropdown ant-cascader-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
  style="opacity: 0; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader popup correctly with defaultValue RTL 1`] = `
<div
  class="ant-select ant-cascader ant-select-rtl ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-open"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-item"
      title="Zhejiang / Hangzhou"
    >
      Zhejiang / Hangzhou
    </span>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-cascader-dropdown ant-cascader-dropdown-rtl ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
      style="opacity: 0; min-width: auto;"
    >
      <div>
        <div
          class="ant-cascader-menus ant-cascader-rtl"
        >
          <ul
            class="ant-cascader-menu"
            role="menu"
          >
            <li
              aria-checked="false"
              class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
              data-path-key="zhejiang"
              role="menuitemcheckbox"
              title="Zhejiang"
            >
              <div
                class="ant-cascader-menu-item-content"
              >
                Zhejiang
              </div>
              <div
                class="ant-cascader-menu-item-expand-icon"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </div>
            </li>
            <li
              aria-checked="false"
              class="ant-cascader-menu-item ant-cascader-menu-item-expand"
              data-path-key="jiangsu"
              role="menuitemcheckbox"
              title="Jiangsu"
            >
              <div
                class="ant-cascader-menu-item-content"
              >
                Jiangsu
              </div>
              <div
                class="ant-cascader-menu-item-expand-icon"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </div>
            </li>
          </ul>
          <ul
            class="ant-cascader-menu"
            role="menu"
          >
            <li
              aria-checked="true"
              class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
              data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
              role="menuitemcheckbox"
              title="Hangzhou"
            >
              <div
                class="ant-cascader-menu-item-content"
              >
                Hangzhou
              </div>
              <div
                class="ant-cascader-menu-item-expand-icon"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </div>
            </li>
          </ul>
          <ul
            class="ant-cascader-menu"
            role="menu"
          >
            <li
              aria-checked="false"
              class="ant-cascader-menu-item"
              data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
              role="menuitemcheckbox"
              title="West Lake"
            >
              <div
                class="ant-cascader-menu-item-content"
              >
                West Lake
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="arrow-down"
      class="anticon anticon-arrow-down ant-select-suffix"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="arrow-down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
        />
      </svg>
    </span>
  </span>
  <span
    aria-hidden="true"
    class="ant-select-clear"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="close-fullfiled"
      class="anticon anticon-close-fullfiled"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-fullfiled"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 6.3L5.88 5.16a.5.5 0 00-.77.64l.06.07L7.3 8l-2.12 2.12a.5.5 0 00.64.77l.07-.06L8 8.7l2.12 2.12a.5.5 0 00.77-.64l-.06-.07L8.7 8l2.12-2.12a.5.5 0 00-.64-.77l-.07.06L8 7.3 5.88 5.17 8 7.3z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Cascader rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-select ant-cascader ant-select-rtl ant-select-single ant-select-allow-clear ant-select-show-arrow"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="arrow-down"
      class="anticon anticon-arrow-down ant-select-suffix"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="arrow-down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Cascader should highlight keyword and filter when search in Cascader 1`] = `"<div><div class=\\"ant-cascader-menus\\"><ul class=\\"ant-cascader-menu\\" role=\\"menu\\"><li class=\\"ant-cascader-menu-item\\" role=\\"menuitemcheckbox\\" aria-checked=\\"false\\" data-path-key=\\"zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu\\"><div class=\\"ant-cascader-menu-item-content\\"><span class=\\"ant-cascader-menu-item-keyword\\">Z</span>hejiang / Hang<span class=\\"ant-cascader-menu-item-keyword\\">z</span>hou / West Lake</div></li><li class=\\"ant-cascader-menu-item\\" role=\\"menuitemcheckbox\\" aria-checked=\\"false\\" data-path-key=\\"jiangsu__RC_CASCADER_SPLIT__nanjing__RC_CASCADER_SPLIT__zhonghuamen\\"><div class=\\"ant-cascader-menu-item-content\\">Jiangsu / Nanjing / <span class=\\"ant-cascader-menu-item-keyword\\">Z</span>hong Hua Men</div></li></ul></div></div>"`;

exports[`Cascader should highlight keyword and filter when search in Cascader with same field name of label and value 1`] = `"<div><div class=\\"ant-cascader-menus\\"><ul class=\\"ant-cascader-menu\\" role=\\"menu\\"><li class=\\"ant-cascader-menu-item\\" role=\\"menuitemcheckbox\\" aria-checked=\\"false\\" data-path-key=\\"Zhejiang__RC_CASCADER_SPLIT__Hangzhou__RC_CASCADER_SPLIT__West Lake\\"><div class=\\"ant-cascader-menu-item-content\\"><span class=\\"ant-cascader-menu-item-keyword\\">Z</span>hejiang / Hang<span class=\\"ant-cascader-menu-item-keyword\\">z</span>hou / West Lake</div></li><li class=\\"ant-cascader-menu-item ant-cascader-menu-item-disabled\\" role=\\"menuitemcheckbox\\" aria-checked=\\"false\\" data-path-key=\\"Zhejiang__RC_CASCADER_SPLIT__Hangzhou__RC_CASCADER_SPLIT__Xia Sha\\"><div class=\\"ant-cascader-menu-item-content\\"><span class=\\"ant-cascader-menu-item-keyword\\">Z</span>hejiang / Hang<span class=\\"ant-cascader-menu-item-keyword\\">z</span>hou / Xia Sha</div></li></ul></div></div>"`;

exports[`Cascader should render not found content 1`] = `
<div
  class="ant-select-dropdown ant-cascader-dropdown ant-select-dropdown-empty ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
  style="opacity: 0; min-width: 0;"
>
  <div>
    <div
      class="ant-cascader-menus ant-cascader-menu-empty"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-disabled"
          data-path-key="__EMPTY__"
          role="menuitemcheckbox"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            <div
              class="ant-empty ant-empty-normal ant-empty-small"
            >
              <div
                class="ant-empty-image"
              >
                <svg
                  class="ant-empty-img-simple"
                  height="41"
                  viewBox="0 0 64 41"
                  width="64"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    transform="translate(0 1)"
                  >
                    <ellipse
                      class="ant-empty-img-simple-ellipse"
                      cx="32"
                      cy="33"
                      rx="32"
                      ry="7"
                    />
                    <g
                      class="ant-empty-img-simple-g"
                      fill-rule="nonzero"
                    >
                      <path
                        d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                      />
                      <path
                        class="ant-empty-img-simple-path"
                        d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                      />
                    </g>
                  </g>
                </svg>
              </div>
              <div
                class="ant-empty-description"
              >
                No Data
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader should show not found content when options.length is 0 1`] = `
<div
  class="ant-select-dropdown ant-cascader-dropdown ant-select-dropdown-empty ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
  style="opacity: 0; min-width: 0;"
>
  <div>
    <div
      class="ant-cascader-menus ant-cascader-menu-empty"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-disabled"
          data-path-key="__EMPTY__"
          role="menuitemcheckbox"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            <div
              class="ant-empty ant-empty-normal ant-empty-small"
            >
              <div
                class="ant-empty-image"
              >
                <svg
                  class="ant-empty-img-simple"
                  height="41"
                  viewBox="0 0 64 41"
                  width="64"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    transform="translate(0 1)"
                  >
                    <ellipse
                      class="ant-empty-img-simple-ellipse"
                      cx="32"
                      cy="33"
                      rx="32"
                      ry="7"
                    />
                    <g
                      class="ant-empty-img-simple-g"
                      fill-rule="nonzero"
                    >
                      <path
                        d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                      />
                      <path
                        class="ant-empty-img-simple-path"
                        d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                      />
                    </g>
                  </g>
                </svg>
              </div>
              <div
                class="ant-empty-description"
              >
                No Data
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader support controlled mode 1`] = `
<div
  class="ant-select ant-cascader ant-select-single ant-select-allow-clear ant-select-show-arrow"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-item"
      title="Zhejiang / Hangzhou / West Lake"
    >
      Zhejiang / Hangzhou / West Lake
    </span>
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="arrow-down"
      class="anticon anticon-arrow-down ant-select-suffix"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="arrow-down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
        />
      </svg>
    </span>
  </span>
  <span
    aria-hidden="true"
    class="ant-select-clear"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="close-fullfiled"
      class="anticon anticon-close-fullfiled"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-fullfiled"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 6.3L5.88 5.16a.5.5 0 00-.77.64l.06.07L7.3 8l-2.12 2.12a.5.5 0 00.64.77l.07-.06L8 8.7l2.12 2.12a.5.5 0 00.77-.64l-.06-.07L8.7 8l2.12-2.12a.5.5 0 00-.64-.77l-.07.06L8 7.3 5.88 5.17 8 7.3z"
        />
      </svg>
    </span>
  </span>
</div>
`;
